--- a/package.json
+++ b/package.json
@@ -5,20 +5,32 @@
   "repository": "git@github.com:Kenzie-Academy-Brasil-Developers/q4-sprint2-kenzie-buster-RobsonMT.git",
   "author": "RobsonMT <rbsndev3@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": "18.2.x"
+  },
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.3.6"
+    "typeorm": "0.3.6",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.10",
+    "@types/uuid": "^8.3.4",
+    "@types/yup": "^0.29.14",
     "bcrypt": "^5.0.1",
+    "nodemon": "^2.0.16",
+    "sucrase": "^3.21.0",
     "ts-node": "10.7.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
   },
   "scripts": {
