:rocket: deploy on heroku
deploy on heroku

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,6 @@
-PORT=
-POSTGRES_DB=
-POSTGRES_PASSWORD=
-PGPORT=
+PORT=3000
 
-DB_URI_DEV=
+DATABASE_URL=
 
 ADMIN_NAME=
 ADMIN_EMAIL=
@@ -11,8 +8,3 @@ ADMIN_PASSWORD=
 
 SECRET_KEY=
 EXPIRES_IN=
-
-NODEMAILER_HOST=
-NODEMAILER_PORT=
-NODEMAILER_USER=
-NODEMAILER_PASWORD=
