--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./dist",
+    "rootDir": "./src",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
-    "strictPropertyInitialization": false,
     "sourceMap": true
   }
 }
