--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.14",
     "bcrypt": "^5.0.1",
-    "nodemon": "^2.0.16",
-    "sucrase": "^3.21.0",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
   },
   "scripts": {
+    "start": "node dist/server.js",
+    "build": "tsc",
     "dev": "ts-node-dev --inspect --files --rs src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:create": "typeorm-ts-node-commonjs migration:create",
