--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "RobsonMT <rbsndev3@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "18.2.x"
+    "node": "18.2.x",
+    "npm": "8.9.x"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
@@ -17,7 +18,8 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.3.6",
     "uuid": "^8.3.2",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "bcrypt": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -27,7 +29,6 @@
     "@types/node": "^16.11.10",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.29.14",
-    "bcrypt": "^5.0.1",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
