--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "engines": {
     "node": "18.2.x",
-    "npm": "8.9.x"
+    "npm": "8.9.x",
+    "yarn": "1.22.x"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
